--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.5",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "cheerio": "^1.0.0-rc.12",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
