--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cheerio": "^1.0.0-rc.12",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "eslint": "8.44.0",
