--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.7",
     "cheerio": "^1.0.0-rc.12",
     "next": "^14.2.5",
+    "papaparse": "^5.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.66.1"
